[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/material_maker/graph_edit.gd" type="Script" id=1]
[ext_resource path="res://addons/material_maker/nodes/material.tscn" type="PackedScene" id=2]

[sub_resource type="Theme" id=1]


[node name="GraphEdit" type="GraphEdit"]

self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
right_disconnects = true
scroll_offset = Vector2( -525, -250 )
snap_distance = 20
use_snap = false
zoom = 1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Mouse", "Visibility" ]

[node name="Material" parent="." index="0" instance=ExtResource( 2 )]

margin_left = 525.0
margin_top = 250.0
margin_right = 755.0
margin_bottom = 470.0
theme = SubResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Theme", "slot", "slot/0", "slot/1", "slot/2", "slot/3", "slot/4", "slot/5" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[connection signal="connection_request" from="." to="." method="connect_node"]

[connection signal="disconnection_request" from="." to="." method="disconnect_node"]

[connection signal="timeout" from="Timer" to="." method="do_send_changed_signal"]


